This is the CHANGELOG for amavisd-milter.

20070831:
	Added new amavisd-milter option -D client|server which allow
	personalized header or body modifications.
	Requested by: Brian C. Huffman <bhuffman@graze.net>

	Fixed bug when amavisd communication buffer is growing.
	Thanks to: Michael Moeller <mmoeller@kimchukmail.com>

20070729:
	Better compatibility with Postfix: it does give information about
	the queue-number only after the RCPT-TO-phase.
	Thanks to: David Schweikert <david@schweikert.ch>

20061219:
	amavisd-milter-1.2.1

	New features:
	- Implemented AM.PDP request attribute 'protocol_name'.
	  Add folowing line to your sendmail.mc:

	  define(`confMILTER_MACROS_ENVFROM', confMILTER_MACROS_ENVFROM`, r, b')

	Limited support for sendmail 8.12:
	- smfi_addheader() is used instead of smfi_insheader() for insheader
          and addheader AM.PDP responses. This works well with amavisd-new
          2.4.3 or newer.
	- smfi_progress() isn't called when amavisd-milter wait for amavisd-new
	  communication socket.
	- AM.PDP response quarantine isn't implemented.

	Bug fixies:
	- add synthesized Received header for Spamassassin.
	- properly handle IPv6 client address.

20061217:
	Added support for IPv6 addresses.
	Thanks to: Mark Martinec <Mark.Martinec@ijs.si>

20061206:
	Limited support for legacy sendmail 8.12:
	- AM.PDP v2 response attribute quarantine isn't implemented. 
	Thanks to: Adam Gibson <agibson@ptm.com> 

20061203:
	Added info about user authentication to synthesized received header.
	Format of synthesized received header is now:

	Received: from <hello> (<rdns> [<ip>]) (authenticated bits=<bits>)
		by <hostname> (<rdns> [<ip>])
		with <protocol> (authenticated as <user>) id <qid>;
		<date>
		(envelope-from <sender>)

	Thanks to: Jo Rhett <jrhett@netconsonance.com>

20061113:
	Limited support for legacy sendmail 8.12:
	- amavisd-milter don't call smfi_progress when wait for amavisd-new
	  communication socket.