@@ -1,5 +1,10 @@
 This is the CHANGELOG for amavisd-milter.
 
+20070901:
+	Performance optimization: use sem_timedwait instead of
+	sem_trywait+sleep(1) for amavisd connection lock.
+	Requested by: David Schweikert <david@schweikert.ch>
+
 20070831:
 	Added new amavisd-milter option -D client|server which allow
 	personalized header or body modifications.
@@ -246,4 +251,4 @@ This is the CHANGELOG for amavisd-milter.
 	First public release.  Fully tested on FreeBSD 5.3.
 
 
-$Id: CHANGES,v 1.46 2007/08/31 21:08:14 reho Exp $
+$Id: CHANGES,v 1.47 2007/08/31 21:59:28 reho Exp $
